deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: aplication
  name: aplication
spec:
  replicas: 1
  selector:
    matchLabels:
	app: aplication
  strategy: {}
  template:
    metadata:
	creationTimestamp: null
	labels:
	  app: aplication
    spec:
      containers:
      - image: virt.01
	imagePullPolicy: IfNotPresent
	name: virt-01-42lsz
	resources: {}
status: {}
