ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
	paths:
	- path: /
	  pathType: Prefix
	  backend:
	    service:
	      name: app
	      port:
		number: 4000
